--- a/src/pages/profile.html
+++ b/src/pages/profile.html
@@ -136,6 +136,58 @@
 
     <section>
       <div class="container">
+        <div class="title_header">
+        <div class="title_group">
+            <div>
+              <h2>My Favorites</h2>
+              <div class="list_option_wrapper" data-role="tooltip">
+                <div class="list_options glyphicons_v2 more"></div>
+              </div>
+            </div>
+          <div>
+            <h3 class="scroll border_color pink on"><a class="no_click" data-media-type="movie" data-title="My Favorites — The Movie Database (TMDB)" data-partial="/u/karimov_14/items/favorites" href="/u/karimov_14/favorites">Movies <span class="color pink">23</span></a></h3>
+            <h3 class="scroll border_color pink"><a class="no_click" data-media-type="tv" data-title="My Favorites — The Movie Database (TMDB)" data-partial="/u/karimov_14/items/favorites" href="/u/karimov_14/favorites/tv">TV <span class="color pink">5</span></a></h3>
+          </div>
+        </div>
+
+        <div class="filter_group">
+          <div class="sort_filter">
+            <h4>Filter by:</h4>
+            <div class="group_wrapper">
+              <div class="group_dropdown filters">
+                <span id="sort_by_created_at" class="sort_text color border_color pink hide"><span class="text">Date Added </span></span>
+                <span id="sort_by_popularity" class="sort_text color border_color pink hide"><span class="text">Popularity </span></span>
+                <span id="sort_by_release_date" class="sort_text color border_color pink"><span class="text">Release Date </span></span>
+
+                <ul class="filters">
+                  <li id="filter_by_created_at" class=""><a>Date Added</a></li>
+                  <li id="filter_by_popularity" class=""><a>Popularity</a></li>
+                  <li id="filter_by_release_date" class="selected"><a>Release Date</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="order_filter">
+              <h4>Order:</h4>
+              <div class="group_wrapper">
+                <div class="group_dropdown sort">
+                  <a class="sort_order selected color_hover pink no_click" data-order="desc"><span>↓</span></a>
+                  <a class="sort_order hide color_hover pink no_click" data-order="asc"><span>↑</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- <div class="group_wrapper">
+            <a class="item_search_button no_click" href="#">
+              <span class="glyphicons_v2 search"></span>
+            </a>
+            <form class="item_search_form hide">
+              <input id="with_text_search" data-partial="/u/karimov_14/items/favorites" class="color border_color pink" type="text" name="with_text" value="" autocorrect="off" autofill="off" autocomplete="off" spellcheck="false">
+            </form>
+          </div> -->
+        </div>
+      </div>
         <div class="profile__wrapper">
           
         </div>
