--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <div class="loader__wrapper">
+      <span class="loader"></span>
+    </div>
     <header>
       <nav>
         <div class="container">
@@ -122,8 +125,6 @@
       </div>
     </section>
 
-
-
     <!-- <section>
       <div class="container">
         <div class="row row__outline--show">
@@ -136,21 +137,15 @@
       </div>
     </section> -->
 
-
-
-
-
-
-
-
-
-
-
-
     <footer>
       <article class="footer">
         <div class="join">
-          <img src="../assets/img/img_footer.svg" alt="The Movie Database (TMDB)" width="130" height="94">
+          <img
+            src="../assets/img/img_footer.svg"
+            alt="The Movie Database (TMDB)"
+            width="130"
+            height="94"
+          />
 
           <a class="rounded logged_in account__name" href="./profile.html"></a>
         </div>
@@ -162,13 +157,20 @@
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Support Forums</a></li>
             <li><a href="#">API</a></li>
-            <li><a href="#" target="_blank" rel="noopener">System Status</a></li>
+            <li>
+              <a href="#" target="_blank" rel="noopener">System Status</a>
+            </li>
           </ul>
         </div>
         <div class="footer__wrapper">
           <h3>Get Involved</h3>
           <ul>
-            <li><a href="#"><span class="glyphicons glyphicons-asterisk"></span> Contribution Bible</a></li>
+            <li>
+              <a href="#"
+                ><span class="glyphicons glyphicons-asterisk"></span>
+                Contribution Bible</a
+              >
+            </li>
             <li><a href="#">Add New Movie</a></li>
             <li><a href="#">Add New TV Show</a></li>
           </ul>
@@ -192,7 +194,6 @@
         </div>
       </article>
     </footer>
-    
 
     <script type="module" src="../js/app.js"></script>
   </body>
